Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1622

CompressContent processor does not update the extension correctly for tar.gz

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.11.0
    • None

    Description

      In case the "Encapsulate in TAR" and "Update Filename" properties are set the expected behavior should be that the filename property is updated with the added ".tar.gz" extension.

      The current behavior is that the filename is only updated with the ".gz" extension which is misleading if the flowfile content is written on disk.

      Attachments

        Activity

          People

            lordgamez Gábor Gyimesi
            lordgamez Gábor Gyimesi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h 40m
                1h 40m