MINIFICPP-1622 Fix filename update of CompressContent in case of tar.gz

Signed-off-by: Ferenc Gerlits <fgerlits@gmail.com>

This closes #1153